deploy/addons/metrics.yaml
# if prometheus and grafanna helm charts installed use this
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-server
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: prometheus.k8s
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-prometheus-server
          servicePort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: grafana.k8s
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-grafana
          servicePort: http
