deploy/addons/nats-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-operator
  # Change to the name of the namespace where to install NATS Operator.
  # Alternatively, change to "nats-io" to perform a cluster-scoped deployment in supported versions.
  namespace: gobazel
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nats-operator
  template:
    metadata:
      labels:
        name: nats-operator
    spec:
      serviceAccountName: nats-operator
      containers:
      - name: nats-operator
        image: connecteverything/nats-operator:0.4.4-v1alpha2
        imagePullPolicy: IfNotPresent
        args:
        - nats-operator
        # Uncomment to perform a cluster-scoped deployment in supported versions.
        #- --feature-gates=ClusterScoped=true
        ports:
        - name: readyz
          containerPort: 8080
        - name: nats
          containerPort: 4222
        readinessProbe:
          httpGet:
            path: /readyz
            port: readyz
          initialDelaySeconds: 15
          timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: gobazel
spec:
  selector:
    name: nats-operator
  ports:
  - name: readyz
    port: 80
    targetPort: 8080
  - name: nats
    port: 4222
    targetPort: 4222
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nats
  namespace: gobazel
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: gobazel.minikube
    http:
      paths:
        - path: /nats
          backend:
            serviceName: nats
            servicePort: readyz
